--- a/TechSol_API_Proj/ClientApp/src/app/customers/customers.component.css
+++ b/TechSol_API_Proj/ClientApp/src/app/customers/customers.component.css
@@ -114,3 +114,12 @@
 .btn-delete:hover {
   background-color: #d32f2f;
 }
+
+.alert {
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+  padding: 10px;
+  margin-top: 5px;
+  border-radius: 4px;
+}
